--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "logos": "github:elieltonkremer/logos-js",
     "logos-schema": "github:elieltonkremer/logos-js-schema",
     "mongodb": "^3.6.6",
-    "nodemailer": "^6.6.1"
+    "nodemailer": "^6.6.1",
+    "url-pattern": "^1.0.3"
   }
 }
